--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <em><strong>Student Of <a href="https://www.yorku.ca">York University</a></strong></em>
         </p>
         <p>
-          I am an IOS and Web developer.<br /> I 🖤 coffee and brew my own beers.
+          I aspire to become a Web Developer.<br /> I 🖤 playing Tennis and Coding programs.
         </p>
       </td>
     </tr>
@@ -30,7 +30,7 @@
 
 
         <hr>
-        <h3>Books and Sports</h3>
+        <h3>Studies and Sports</h3>
         <ul>
           <li>I have studied physics chemistry and math</li>
           <li>I have also won many medals in skating,cycling and athletics</li>
@@ -41,13 +41,13 @@
     <thead>
       <tr>
         <th>Dates</th>
-        <th>Work</th>
+        <th>Studies</th>
       </tr>
     </thead>
     <tbody>
     <tr>
-      <td>2010-2103</td>
-      <td>Developer</td>
+      <td>2020-2022</td>
+      <td>Studied C++, HTML and Instruction Set of Microprocessor 8085</td>
     </tr>
     </tbody>
   </table>
@@ -84,3 +84,4 @@
 </body>
 
 </html>
+
